fix layout issues.

--- a/TeamWeekClient/wwwroot/css/bgStyles.css
+++ b/TeamWeekClient/wwwroot/css/bgStyles.css
@@ -35,11 +35,12 @@
   padding: 25px;
 }
 
-#liBtn {
+#uBtn {
   position: absolute;
-  left: 100px;
-  bottom: 0px;
-  padding: 25px;
+  left: 90px;
+  bottom: 100px;
+  padding: 24px;
+  rotate: -20deg;
 }
 
 #pBtn {
